fix align perfect grid

--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -506,7 +506,7 @@ div.cta-button
 			padding 0 10%
 			+above($md)
 				padding 0 30%
-
+$ratio = 2/3
 #projects
 	margin-bottom $spaceBetween
 	hideselect()
@@ -526,12 +526,26 @@ div.cta-button
 		position relative
 		cursor pointer
 		width (( 130rem - 2 ) / 2)
+		height ((((( 130rem - 2 ) / 2) * $ratio) * 2) + 2)
+		background-size cover
+		background-position center
 		+below($xl)
 			width (( 95rem - 2 ) / 2)
+			height ((((( 95rem - 2 ) / 2) * $ratio) * 2) + 2)
 		+below($md)
 			width 48.75%
+			height ((((( 100vw ) / 2) * $ratio) * 2) + 2.4)
 		+below($sm)
 			width 100%
+			height (((( 100vw ) * $ratio) * 2) + 2.4)
+		&.landscape, &.highlight
+			height ((( 130rem - 2 ) / 2) * $ratio)
+			+below($xl)
+				height ((( 95rem - 2 ) / 2) * $ratio)
+			+below($md)
+				height ((( 100vw ) / 2) * $ratio)
+			+below($sm)
+				height (100vw  * $ratio)
 		img
 			transition(opacity 200ms ease)
 		a
@@ -562,13 +576,6 @@ div.cta-button
 		.overlay
 			opacity 1
 	.project-item.highlight
-		height ((( 130rem - 2 ) / 2) * 2/3)
-		+below($xl)
-			height ((( 95rem - 2 ) / 2) * 2/3)
-		+below($md)
-			height 36vw
-		+below($sm)
-			height 40rem
 		.overlay
 			background $accent
 			opacity 1
